tests/asm/error/label_without_double_dot_at_the_end.s
.name "zork"
.comment "I'M ]ALIIIIVE"


#anything other then the defined LABEL_CHARS in op.h should be error
#LABEL should be always be ended with ':' (ex: lele:, lele should not be accepted)

lele

# le_12!:

live	%1

liv: live %1
	
